# glitter-rendering

./: .gitignore  CMakeLists.txt  README.md  output_img.ppm  output_viz_mask.ppm
raytracer/: CMakeLists.txt  SHADING_IMPLEMENTATION_OUTLINE.txt  output_img.ppm  output_img_gpu.ppm  output_viz_height.ppm  output_viz_mask.ppm  output_viz_normal.ppm  output_viz_rotation.ppm
raytracer/src/: camera.h  main.cpp  object.h  render_cpu.cpp  render_cpu_visualization.cpp  render_cuda.cu
raytracer/src/components/: color.h  illumination.h  intersect_data.h  k-d_trees.h
raytracer/src/image/: image_ppm.cpp
raytracer/src/math/: color.h  mat4.h  point.h  ray.h  vec3.h
raytracer/src/objects/: sphere.h  triangle.h
renderings/: gold_img.ppm  output_img_gpu.ppm  output_viz_height.ppm
src/: render_cpu.cpp  render_cpu_visualization.cpp  render_cuda.cu  world.h
src/components/: color.h  illumination.h
src/objects/: cube.h
src/textures/: glitter.h
